# Project

./: README.md  addcommitpush
tests/: CMakeLists.txt  c_test  main.c  sum.c  sum.h  test.c
utils/: README.md  Readme.md
utils/allegro/: build  run
